# e19-4yp-Developing-a-Small-Scale-Financial-Language-Model

./: README.md
code/Data_Process/: extract_tables.py  extract_text.py  generate_qa.py
code/RAG pipeline/: build_faiss_index.py  query_faiss.py  read_texts.py
code/backend/: pyproject.toml  requirements.txt
code/backend/app/: auth.py  deps.py  index_docs.py  logging_conf.py  main.py
code/backend/app/ocr/: index_docs.py  ocr.py
code/backend/app/rag/: llm.py  pipeline.py  retriever.py
code/backend/tests/: test_auth.py  test_ocr.py  test_rag.py
code/frontend/: package.json  vite.config.ts
code/frontend/src/: App.tsx
code/frontend/src/components/: MessageBubble.tsx  Navbar.tsx
code/frontend/src/pages/: Admin.tsx  Chat.tsx  Login.tsx
code/frontend/src/routes/: ProtectedRoute.tsx  RoleGuard.tsx
dev/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: README.md
docs/data/: index.json
train/: dataset_prep.py  finetune_qlora.py  merge_lora.py
