[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-rag-llm"
version = "0.1.0"
description = "Finance RAG chatbot with fine-tuned LLaMA 3, OCR, and RBAC"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.1",
    "python-jose==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "langchain==0.2.12",
    "langchain-community==0.2.11",
    "transformers==4.44.2",
    "sentence-transformers==3.0.1",
    "faiss-cpu==1.7.4",
    "pytesseract==0.3.10",
    "pdf2image==1.17.0",
    "Pillow==10.4.0",
    "reportlab==4.2.2",
    "structlog==24.4.0",
    "python-multipart==0.0.9",
]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
httpx = "0.27.0"
black = "24.4.2"
isort = "5.13.2"
